<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_language"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/radioGroupLanguages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/radioEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_en"/>

        <RadioButton
            android:id="@+id/radioRussian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_ru"/>

        <RadioButton
            android:id="@+id/radioGerman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_de"/>
    </RadioGroup>

    <!-- Кнопка применения языка -->
    <Button
        android:id="@+id/btnApplyLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_language"
        android:layout_marginTop="16dp"/>

    <!-- Кнопка перехода к рецептам -->
    <Button
        android:id="@+id/btnGoToRecipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/view_recipes"/>

</LinearLayout>